syntax = "proto3";

package slot;
option go_package = ".;pb";

import "google/api/annotations.proto";

message Slot {
  int64 id = 1;
  string description = 2;
}

message FindSlotByIDResponse {
  Slot slot = 1;
}

message FindSlotByIDRequest {
  int64 id = 1;
}

message FindAllSlotsRequest {}

message FindAllSlotsResponse {
  repeated Slot slots = 1;
}

message CreateSlotRequest {
  Slot slot = 1;
}

message CreateSlotResponse {
  int64 inserted_id = 1;
}

message DeleteSlotRequest {
  int64 id = 1;
}

message DeleteSlotResponse {
  int64 affected = 1;
}

message UpdateSlotRequest {
  int64 id = 1;
  Slot slot = 2;
}

message UpdateSlotResponse {
  int64 affected = 1;
}

service SlotService {
  rpc FindSlotByID(FindSlotByIDRequest) returns (FindSlotByIDResponse) {
    option(google.api.http) = {
      get: "/slots/{id}"
    };
  };

  rpc FindAllSlots(FindAllSlotsRequest) returns (FindAllSlotsResponse) {
    option(google.api.http) = {
      get: "/slots"
    };
  };

  rpc CreateSlot(CreateSlotRequest) returns (CreateSlotResponse) {
    option(google.api.http) = {
      post: "/slots"
    };
  };

  rpc DeleteSlot(DeleteSlotRequest) returns (DeleteSlotResponse) {
    option(google.api.http) = {
      delete: "/slots/{id}"
    };
  };

  rpc UpdateSlot(UpdateSlotRequest) returns (UpdateSlotResponse) {
    option(google.api.http) = {
      put: "/-slots/{id}"
    };
  };
}